--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>kalaha</name>
     <description>kalaha</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <springdoc.version>1.6.5</springdoc.version>
     </properties>
     <dependencies>
@@ -41,6 +41,11 @@
             <artifactId>springdoc-openapi-data-rest</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter</artifactId>
+            <version>1.2.8.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,6 +59,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <version>1</version>
+                    <projectId>GCLOUD_CONFIG</projectId>
+                </configuration>
+
             </plugin>
         </plugins>
     </build>
